<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tech.ydb.dialects</groupId>
    <artifactId>ydb-trino-adapter</artifactId>
    <version>0.1.0</version>

    <name>YDB Trino Adapter</name>
    <description>Trino JDBC connector for YDB</description>
    <url>https://github.com/ydb-platform/ydb-java-dialects</url>

    <packaging>jar</packaging>

    <developers>
        <developer>
            <name>Kirill Kurdyukov</name>
            <email>kurdyukov-kir@ydb.tech</email>
            <organization>YDB</organization>
            <organizationUrl>https://ydb.tech/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/ydb-platform/ydb-java-dialects</url>
        <connection>scm:git:https://github.com/ydb-platform/ydb-java-dialects.git</connection>
        <developerConnection>scm:git:https://github.com/ydb-platform/ydb-java-dialects.git</developerConnection>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <trino.version>479</trino.version>
        <ydb.jdbc.version>2.3.18</ydb.jdbc.version>
        <ydb.sdk.version>2.3.13</ydb.sdk.version>
        <junit.version>5.10.1</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-spi</artifactId>
            <version>${trino.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-base-jdbc</artifactId>
            <version>${trino.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>2.1.1</version>
        </dependency>
        <dependency>
            <groupId>tech.ydb.jdbc</groupId>
            <artifactId>ydb-jdbc-driver-shaded</artifactId>
            <version>${ydb.jdbc.version}</version>
        </dependency>

        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-base-jdbc</artifactId>
            <version>${trino.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>tech.ydb.test</groupId>
            <artifactId>ydb-junit5-support</artifactId>
            <version>${ydb.sdk.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-testing</artifactId>
            <version>${trino.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-testing-services</artifactId>
            <version>${trino.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-main</artifactId>
            <version>${trino.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-tpch</artifactId>
            <version>${trino.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.trino.tpch</groupId>
            <artifactId>tpch</artifactId>
            <version>1.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <environmentVariables>
                        <TESTCONTAINERS_REUSE_ENABLE>true</TESTCONTAINERS_REUSE_ENABLE>
                        <YDB_ENDPOINT>localhost:2136</YDB_ENDPOINT>
                        <YDB_DATABASE>/local</YDB_DATABASE>
                    </environmentVariables>
                    <argLine>--add-modules jdk.incubator.vector</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
